--- a/.gitignore
+++ b/.gitignore
@@ -115,9 +115,11 @@ dist
 # production
 /build
 
+# idea editor dependencies
+/.idea
+
+# misc
+.DS_Store
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# idea
-/.idea
